Ensure ListView contentHeight is set to a valid size.

If the view height is 0 no items will be created so the contentHeight
can not be estimated.  The currentItem is usually created,
so it is possible to use that to estimate.

Task-number: QTBUG-16037
Reviewed-by: Bea Lam